try to enable commenting via github issues

--- a/_posts/2018-07-03-Indy-O11y.md
+++ b/_posts/2018-07-03-Indy-O11y.md
@@ -1,6 +1,7 @@
 ---
 title: Learning about Observability (O11y) with Indy
 categories: indy o11y software architecture
+commentIssueId: 1
 ---
 
 ## Introduction
